--- a/reflection_template.qmd
+++ b/reflection_template.qmd
@@ -870,4 +870,4 @@ For week 1 and week 2 I do not think I went above and beyond with external sourc
 
 ![](images/image-1441920820.png){width="266"}
 
-Images also included under the supporting artifacts.
+An image of the peer review is also included under the supporting artifacts.
